# csr

./: Cargo.toml  README.md
csr/: Cargo.toml
csr_derive/: Cargo.toml
csr_derive/src/: lib.rs
csr_examples/: Cargo.toml  README.md  exp_low_level_acccess.rs  imm_specialization.objdump  low_level_access.objdump  memory.x  rust-toolchain.toml
csr_examples/.cargo/: config.toml
csr_examples/examples/: csr_ex.rs  imm_specialization.rs
csr_examples/src/: lib.rs  main.rs
csr_macro/: Cargo.toml
csr_macro/src/: lib.rs
csr_trait/: Cargo.toml
csr_trait/src/: lib.rs
examples/: ex.rs
src/: lib.rs  main.rs
