[package]
name = "csr"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
    "csr_examples",
    "csr_trait",
    "csr_derive",
    "csr_macro",
    "csr_examples",
]

[dependencies]
csr_derive = { path = "csr_derive" }
csr_macro = { path = "csr_macro" }
csr_trait = { path = "csr_trait" }
csr_examples = { path = "csr_examples" }
